--- a/index.html
+++ b/index.html
@@ -3,15 +3,97 @@
 <head>
     <title>Co-op Training Quiz</title>
     <style>
-        .quiz-section { display: none; }
-        #result-summary { display: none; font-weight: bold; }
+        /* General Styles */
+        body {
+            background-color: #FAF3E0; /* Warm beige background */
+            color: #4A4A4A; /* Dark, soft text color */
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+
+        h1, h2 {
+            color: #5A352D; /* Dark brown color for headers */
+            font-weight: normal;
+        }
+
+        h1 {
+            margin-top: 20px;
+        }
+
+        /* Button Styles */
+        button {
+            background-color: #D4A373; /* Warm, inviting brown */
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            margin: 10px 0;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #B08862; /* Darker shade on hover */
+        }
+
+        /* Quiz Section Styles */
+        .quiz-section {
+            display: none;
+            background-color: #FFF8F0; /* Light warm background for quiz sections */
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            margin: 20px auto;
+            max-width: 500px;
+            text-align: left;
+        }
+
+        /* Answer and Result Styles */
+        label {
+            display: block;
+            margin: 8px 0;
+            font-size: 16px;
+        }
+
+        input[type="radio"] {
+            margin-right: 10px;
+        }
+
+        #result-summary {
+            display: none;
+            font-weight: bold;
+            background-color: #FFF8F0;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            margin: 20px auto;
+            max-width: 500px;
+        }
+
+        /* History Styles */
+        #history {
+            margin-top: 20px;
+            text-align: left;
+        }
+
+        /* Result Feedback */
+        .result-correct {
+            color: #4CAF50; /* Green for correct */
+        }
+
+        .result-incorrect {
+            color: #E57373; /* Red for incorrect */
+        }
     </style>
     <script>
         let currentSection = 1;
         let score = 0;
         let startTime;
+        let answerSubmitted = false;
 
-        // Start timer at the beginning of the quiz
         function startQuiz() {
             startTime = new Date().getTime();
             document.getElementById("startButton").style.display = "none";
@@ -24,13 +106,14 @@
             if (selectedAnswer) {
                 if (selectedAnswer.value === correctAnswer) {
                     result.textContent = "Correct!";
-                    result.style.color = "green";
+                    result.className = "result-correct";
                     score++;
                 } else {
-                    result.textContent = "Not quite! The correct answer was the one marked '" + correctAnswer + "'.";
-                    result.style.color = "red";
+                    result.textContent = `Not quite! The correct answer was '${correctAnswer}'.`;
+                    result.className = "result-incorrect";
                 }
                 document.getElementById(`next${questionNumber}`).style.display = "inline";
+                answerSubmitted = true;
             } else {
                 alert("Please select an answer!");
             }
@@ -42,32 +125,26 @@
             }
             currentSection = sectionNumber;
             document.getElementById(`section${sectionNumber}`).style.display = "block";
+            answerSubmitted = false;
         }
 
         function showFinalResult() {
             const endTime = new Date().getTime();
             const timeTaken = Math.round((endTime - startTime) / 1000);
 
-            // Retrieve existing quiz history from localStorage or initialize an empty array
             const quizHistory = JSON.parse(localStorage.getItem("quizHistory")) || [];
-
-            // Add the current quiz attempt to the history array
             const attempt = {
                 score: score,
                 timeTaken: timeTaken,
                 date: new Date().toLocaleString()
             };
             quizHistory.push(attempt);
-
-            // Save the updated history back to localStorage
             localStorage.setItem("quizHistory", JSON.stringify(quizHistory));
 
-            // Display the current result summary
             document.getElementById("result-summary").style.display = "block";
             document.getElementById("final-score").textContent = `You scored ${score} out of 3!`;
             document.getElementById("time-taken").textContent = `Time taken: ${timeTaken} seconds`;
 
-            // Display historical data for enterprise management
             displayHistory();
         }
 
@@ -88,46 +165,18 @@
                 historyDiv.innerHTML += attemptInfo;
             });
         }
-
-        // Handle keystrokes for answer selection and navigation
-        document.addEventListener("keydown", function(event) {
-            const key = event.key;
-
-            // Select answer based on keystroke (1, 2, 3, or 4)
-            if (['1', '2', '3', '4'].includes(key)) {
-                const optionIndex = parseInt(key) - 1;
-                const questionNumber = currentSection;
-                const options = document.querySelectorAll(`input[name="answer${questionNumber}"]`);
-                if (options[optionIndex]) {
-                    options[optionIndex].checked = true;
-                }
-            }
-
-            // Submit answer or go to the next section on "Enter"
-            if (key === "Enter") {
-                const submitButton = document.querySelector(`#section${currentSection} button[type="button"]`);
-                if (submitButton) {
-                    submitButton.click(); // Triggers checkAnswer for the current question
-                } else if (currentSection < 3) {
-                    showSection(currentSection + 1);
-                } else if (currentSection === 3) {
-                    showFinalResult();
-                }
-            }
-        });
     </script>
 </head>
 <body>
     <h1>Co-op Training Quiz</h1>
     <button id="startButton" onclick="startQuiz()">Start Quiz</button>
 
-    <!-- Question 1 -->
-    <div id="section1" class="quiz-section" style="display: none;">
+    <div id="section1" class="quiz-section">
         <h2>What Makes a Co-op Training Program Successful?</h2>
         <form>
-            <label><input type="radio" name="answer1" value="Unity"> Unity in purpose and fellowship</label><br>
-            <label><input type="radio" name="answer1" value="Stewardship"> Faithful stewardship of talents and resources</label><br>
-            <label><input type="radio" name="answer1" value="Service"> Service to the community and co-op members</label><br>
+            <label><input type="radio" name="answer1" value="Unity"> Unity in purpose and fellowship</label>
+            <label><input type="radio" name="answer1" value="Stewardship"> Faithful stewardship of talents and resources</label>
+            <label><input type="radio" name="answer1" value="Service"> Service to the community and co-op members</label>
             <label><input type="radio" name="answer1" value="All"> All of the above</label><br><br>
             <button type="button" onclick="checkAnswer(1, 'All')">Submit Answer</button>
         </form>
@@ -135,13 +184,12 @@
         <button id="next1" style="display:none;" onclick="showSection(2)">Next</button>
     </div>
 
-    <!-- Question 2 -->
     <div id="section2" class="quiz-section">
         <h2>Which of the following actions is appropriate when handling sensitive co-op information?</h2>
         <form>
-            <label><input type="radio" name="answer2" value="Share"> Share it with outside parties without permission</label><br>
-            <label><input type="radio" name="answer2" value="StoreSecurely"> Store it securely and limit access to authorized members only</label><br>
-            <label><input type="radio" name="answer2" value="DiscussPublicly"> Discuss it in a public setting</label><br>
+            <label><input type="radio" name="answer2" value="Share"> Share it with outside parties without permission</label>
+            <label><input type="radio" name="answer2" value="StoreSecurely"> Store it securely and limit access to authorized members only</label>
+            <label><input type="radio" name="answer2" value="DiscussPublicly"> Discuss it in a public setting</label>
             <label><input type="radio" name="answer2" value="PersonalUse"> Use it for personal gain</label><br><br>
             <button type="button" onclick="checkAnswer(2, 'StoreSecurely')">Submit Answer</button>
         </form>
@@ -149,13 +197,12 @@
         <button id="next2" style="display:none;" onclick="showSection(3)">Next</button>
     </div>
 
-    <!-- Question 3 -->
     <div id="section3" class="quiz-section">
         <h2>What should a member do if they notice a potential safety hazard in the co-op workplace?</h2>
         <form>
-            <label><input type="radio" name="answer3" value="Ignore"> Ignore it and hope it will go away</label><br>
-            <label><input type="radio" name="answer3" value="Report"> Report it immediately to a supervisor or designated safety officer</label><br>
-            <label><input type="radio" name="answer3" value="FixAlone"> Attempt to fix it themselves without any guidance</label><br>
+            <label><input type="radio" name="answer3" value="Ignore"> Ignore it and hope it will go away</label>
+            <label><input type="radio" name="answer3" value="Report"> Report it immediately to a supervisor or designated safety officer</label>
+            <label><input type="radio" name="answer3" value="FixAlone"> Attempt to fix it themselves without any guidance</label>
             <label><input type="radio" name="answer3" value="Delay"> Wait until a meeting to bring it up</label><br><br>
             <button type="button" onclick="checkAnswer(3, 'Report')">Submit Answer</button>
         </form>
@@ -163,7 +210,6 @@
         <button id="next3" style="display:none;" onclick="showFinalResult()">Finish</button>
     </div>
 
-    <!-- Final Score Summary -->
     <div id="result-summary">
         <p id="final-score"></p>
         <p id="time-taken"></p>
