--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <style>
         /* General Styles */
         body {
-            background-color: #F3EDE2; /* Soft cream background */
+            background-image: url('Roman-missal-St.Joseph-Worker-by-Royal-Griffin_8538059693_0f44446f1d_C1-1.jpg');
+            background-size: cover; /* Ensures the image covers the entire background */
+            background-repeat: no-repeat;
+            background-attachment: fixed; /* Keeps the image in place when scrolling */
+            background-position: center; /* Centers the image */
             color: #4B3A29; /* Dark brown, manuscript-like text color */
             font-family: 'Georgia', serif; /* Traditional font */
             margin: 0;
@@ -44,7 +48,7 @@
         /* Quiz Section Styles */
         .quiz-section {
             display: none;
-            background-color: #F9F4E6; /* Light cream background for quiz sections */
+            background-color: #F9F4E6; /* Light cream background, no transparency */
             padding: 20px;
             border-radius: 8px;
             border: 2px solid #A62639; /* Deep red border */
@@ -69,7 +73,7 @@
         #result-summary {
             display: none;
             font-weight: bold;
-            background-color: #F9F4E6;
+            background-color: #F9F4E6; /* Solid cream background */
             padding: 20px;
             border-radius: 8px;
             border: 2px solid #A62639;
