--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Co-op Training Quiz</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         /* General Styles */
@@ -53,7 +54,7 @@
             border: 2px solid #A62639;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
             margin: 20px auto;
-            max-width: 600px;
+            max-width: 90%;
             text-align: left;
         }
 
@@ -77,7 +78,7 @@
             border: 2px solid #A62639;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
             margin: 20px auto;
-            max-width: 600px;
+            max-width: 90%;
         }
 
         #history {
@@ -95,13 +96,32 @@
 
         #chartContainer {
             display: none;
-            max-width: 600px;
+            max-width: 90%;
             margin: 20px auto;
             padding: 20px;
             background-color: #F9F4E6;
             border-radius: 8px;
             border: 2px solid #A62639;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        @media only screen and (max-width: 600px) {
+            button {
+                font-size: 14px;
+                padding: 10px;
+            }
+
+            label {
+                font-size: 14px;
+            }
+
+            h1, h2 {
+                font-size: 20px;
+            }
+
+            .quiz-section, #result-summary, #chartContainer {
+                padding: 15px;
+            }
         }
     </style>
     <script>
