--- a/index.html
+++ b/index.html
@@ -145,11 +145,12 @@
                     result.className = "result-correct";
                     score++;
                     document.getElementById(`next${questionNumber}`).style.display = "inline";
+                    answerSubmitted = true;  // Correct answer, now we can proceed to the next question
                 } else {
                     result.textContent = "Not quite! Please try again.";
                     result.className = "result-incorrect";
+                    answerSubmitted = false;  // Incorrect answer, we need to keep trying
                 }
-                answerSubmitted = true;
             } else {
                 alert("Please select an answer!");
             }
@@ -242,27 +243,39 @@
             });
         }
 
+        // Event listener to handle both the Enter key and numeric keys
         document.addEventListener('keydown', function(event) {
             const key = event.key;
 
-            if (currentSection === 0 && key === 'Enter') {
-                // Start the quiz from the start screen
-                startQuiz();
-            } else if (key >= '1' && key <= '4') {
+            // Handle number key presses (1, 2, 3, 4)
+            if (key >= '1' && key <= '4') {
                 const index = key - 1;
                 const radios = document.querySelectorAll(`#section${currentSection} input[type="radio"]`);
                 if (radios[index]) {
                     radios[index].checked = true;
                 }
-            } else if (key === 'Enter') {
-                if (!answerSubmitted) {
+            } 
+            // Handle Enter key press
+            else if (key === 'Enter') {
+                // Start the quiz from the start screen
+                if (currentSection === 0) {
+                    startQuiz();
+                } 
+                // If we're in a quiz section and haven't submitted an answer or need to re-submit
+                else if (!answerSubmitted) {
                     const submitButton = document.querySelector(`#section${currentSection} button[type="button"]`);
-                    submitButton.click();
-                } else {
+                    if (submitButton) {
+                        submitButton.click();
+                    }
+                } 
+                // If an answer has been submitted and it is correct, move to next section
+                else if (answerSubmitted) {
                     const nextButton = document.getElementById(`next${currentSection}`);
                     if (nextButton && nextButton.style.display === 'inline') {
                         nextButton.click();
-                    } else if (currentSection === 3) {
+                    } 
+                    // If we're on the last section, show final results
+                    else if (currentSection === 3) {
                         showFinalResult();
                     }
                 }
