--- a/index.html
+++ b/index.html
@@ -4,312 +4,8 @@
     <title>Co-op Training Quiz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-        /* General Styles */
-        body {
-            background-image: url('Roman-missal-St.Joseph-Worker-by-Royal-Griffin_8538059693_0f44446f1d_C1-1.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: center;
-            color: #4B3A29;
-            font-family: 'Georgia', serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        h1, h2 {
-            color: #6E0B14;
-            font-family: 'Times New Roman', serif;
-            font-weight: bold;
-        }
-
-        h1 {
-            margin-top: 20px;
-        }
-
-        button {
-            background-color: #A62639;
-            color: #F9F4E6;
-            border: none;
-            padding: 10px 20px;
-            margin: 10px 0;
-            font-size: 16px;
-            font-family: 'Georgia', serif;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        button:hover {
-            background-color: #891C2D;
-        }
-
-        .quiz-section {
-            display: none;
-            background-color: #F9F4E6;
-            padding: 20px;
-            border-radius: 8px;
-            border: 2px solid #A62639;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-            margin: 20px auto;
-            max-width: 90%;
-            text-align: left;
-        }
-
-        label {
-            display: block;
-            margin: 10px 0;
-            font-size: 16px;
-            font-family: 'Georgia', serif;
-        }
-
-        input[type="radio"] {
-            margin-right: 10px;
-        }
-
-        #result-summary {
-            display: none;
-            font-weight: bold;
-            background-color: #F9F4E6;
-            padding: 20px;
-            border-radius: 8px;
-            border: 2px solid #A62639;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-            margin: 20px auto;
-            max-width: 90%;
-        }
-
-        #history {
-            margin-top: 20px;
-            text-align: left;
-        }
-
-        .result-correct {
-            color: #6A8E3E;
-        }
-
-        .result-incorrect {
-            color: #B22222;
-        }
-
-        #chartContainer {
-            display: none;
-            max-width: 90%;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #F9F4E6;
-            border-radius: 8px;
-            border: 2px solid #A62639;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        #language-switcher {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-        }
-
-        #language-switcher button {
-            background-color: #6E0B14;
-            color: #F9F4E6;
-            border: none;
-            padding: 5px 10px;
-            margin: 0 5px;
-            font-family: 'Georgia', serif;
-            font-size: 14px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        #language-switcher button:hover {
-            background-color: #A62639;
-        }
-
-        @media only screen and (max-width: 600px) {
-            button {
-                font-size: 14px;
-                padding: 10px;
-            }
-
-            label {
-                font-size: 14px;
-            }
-
-            h1, h2 {
-                font-size: 20px;
-            }
-
-            .quiz-section, #result-summary, #chartContainer {
-                padding: 15px;
-            }
-        }
-    </style>
-    <script>
-        let currentSection = 0;  // Start from 0, to represent the start screen
-        let score = 0;
-        let startTime;
-        let answerSubmitted = false;
-
-        function startQuiz() {
-            startTime = new Date().getTime();
-            document.getElementById("startButton").style.display = "none";
-            showSection(1);  // Go to the first question
-        }
-
-        function checkAnswer(questionNumber, correctAnswer) {
-            const selectedAnswer = document.querySelector(`input[name="answer${questionNumber}"]:checked`);
-            const result = document.getElementById(`result${questionNumber}`);
-            if (selectedAnswer) {
-                if (selectedAnswer.value === correctAnswer) {
-                    result.textContent = "Correct!";
-                    result.className = "result-correct";
-                    score++;
-                    document.getElementById(`next${questionNumber}`).style.display = "inline";
-                    answerSubmitted = true;  // Correct answer, now we can proceed to the next question
-                } else {
-                    result.textContent = "Not quite! Please try again.";
-                    result.className = "result-incorrect";
-                    answerSubmitted = false;  // Incorrect answer, we need to keep trying
-                }
-            } else {
-                alert("Please select an answer!");
-            }
-        }
-
-        function showSection(sectionNumber) {
-            if (currentSection > 0) {
-                document.getElementById(`section${currentSection}`).style.display = "none";
-            }
-            currentSection = sectionNumber;
-            document.getElementById(`section${sectionNumber}`).style.display = "block";
-            answerSubmitted = false;
-        }
-
-        function showFinalResult() {
-            const endTime = new Date().getTime();
-            const timeTaken = Math.round((endTime - startTime) / 1000);
-
-            const quizHistory = JSON.parse(localStorage.getItem("quizHistory")) || [];
-            const attempt = {
-                score: score,
-                timeTaken: timeTaken,
-                date: new Date().toLocaleString()
-            };
-            quizHistory.push(attempt);
-            localStorage.setItem("quizHistory", JSON.stringify(quizHistory));
-
-            document.getElementById("chartContainer").style.display = "block";
-            document.getElementById("result-summary").style.display = "block";
-            document.getElementById("final-score").textContent = `You scored ${score} out of 3!`;
-            document.getElementById("time-taken").textContent = `Time taken: ${timeTaken} seconds`;
-
-            displayChart();
-            displayHistory();
-        }
-
-        function displayHistory() {
-            const quizHistory = JSON.parse(localStorage.getItem("quizHistory")) || [];
-            const historyDiv = document.getElementById("history");
-
-            historyDiv.innerHTML = "<h3>Quiz History</h3>";
-            quizHistory.forEach((attempt, index) => {
-                const attemptInfo = `
-                    <p>
-                        Attempt ${index + 1}:<br>
-                        Score: ${attempt.score} / 3<br>
-                        Time Taken: ${attempt.timeTaken} seconds<br>
-                        Date: ${attempt.date}
-                    </p>
-                `;
-                historyDiv.innerHTML += attemptInfo;
-            });
-        }
-
-        function displayChart() {
-            const quizHistory = JSON.parse(localStorage.getItem("quizHistory")) || [];
-            const scores = quizHistory.map(attempt => attempt.score);
-            const times = quizHistory.map(attempt => attempt.timeTaken);
-            const labels = quizHistory.map((_, index) => `Attempt ${index + 1}`);
-
-            const ctx = document.getElementById('quizChart').getContext('2d');
-            new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: labels,
-                    datasets: [
-                        {
-                            label: 'Score',
-                            data: scores,
-                            backgroundColor: 'rgba(166, 38, 57, 0.6)',
-                            borderColor: 'rgba(166, 38, 57, 1)',
-                            borderWidth: 1
-                        },
-                        {
-                            label: 'Time Taken (seconds)',
-                            data: times,
-                            backgroundColor: 'rgba(110, 11, 20, 0.6)',
-                            borderColor: 'rgba(110, 11, 20, 1)',
-                            borderWidth: 1
-                        }
-                    ]
-                },
-                options: {
-                    scales: {
-                        y: {
-                            beginAtZero: true
-                        }
-                    }
-                }
-            });
-        }
-
-        function switchLanguage(lang) {
-            alert(`Switching to ${lang === 'en' ? 'English' : 'Japanese'}...`);
-            // Add your language switch logic here.
-        }
-
-                // Event listener to handle both the Enter key and numeric keys
-                document.addEventListener('keydown', function(event) {
-            const key = event.key;
-
-            // Handle number key presses (1, 2, 3, 4)
-            if (key >= '1' && key <= '4') {
-                const index = key - 1;
-                const radios = document.querySelectorAll(`#section${currentSection} input[type="radio"]`);
-                if (radios[index]) {
-                    radios[index].checked = true;
-                }
-            } 
-            // Handle Enter key press
-            else if (key === 'Enter') {
-                // Start the quiz from the start screen
-                if (currentSection === 0) {
-                    startQuiz();
-                } 
-                // If we're in a quiz section and haven't submitted an answer or need to re-submit
-                else if (!answerSubmitted) {
-                    const submitButton = document.querySelector(`#section${currentSection} button[type="button"]`);
-                    if (submitButton) {
-                        submitButton.click();
-                    }
-                } 
-                // If an answer has been submitted and it is correct, move to next section
-                else if (answerSubmitted) {
-                    const nextButton = document.getElementById(`next${currentSection}`);
-                    if (nextButton && nextButton.style.display === 'inline') {
-                        nextButton.click();
-                    } 
-                    // If we're on the last section, show final results
-                    else if (currentSection === 3) {
-                        showFinalResult();
-                    }
-                }
-            }
-        });
-    </script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div id="language-switcher">
