--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Co-op Training Quiz</title>
+    <title data-en="Co-op Training Quiz" data-jp="協同組合のトレーニングクイズ">Co-op Training Quiz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="styles.css">
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="top-left-controls">
-        <button onclick="clearLocalStorage()">Clear History</button>
+        <button onclick="clearLocalStorage()" data-en="Clear History" data-jp="履歴をクリア">Clear History</button>
     </div>
 
     <div id="language-switcher">
